docs/specs/fixtures/forge-v1/invalid/anchor-alias.forge
#!forge/v1
forge_version: &major 1
schema_ref: urn:forgeroot:forge:agent:v1
kind: agent
revision: *major
